# vore

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Gemfile  LICENSE.txt  Makefile  README.md  Rakefile  vore.gemspec
.github/: dependabot.yml
.github/workflows/: cruby-build-and-install.yml  tag_and_release.yml  test.yml  test_build.yml
ext/vore/: Cargo.toml  extconf.rb
ext/vore/src/: lib.rs  page.rs  website.rs
lib/: vore.rb
lib/vore/: configuration.rb  crawler.rb  logger.rb  minitest_helper.rb  page.rb  page_data.rb  version.rb  website.rb
lib/vore/handlers/: content_extractor.rb  meta_extractor.rb  tag_remover.rb
rakelib/: package.rake
script/: ci  precompile
test/: test_helper.rb  test_vore_crawler.rb  test_vore_extractor.rb
test/fixtures/: content.html
test/vcr_cassettes/: docs_github_com.yml
